[package]
name = "deal_contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "deal_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.28.0", features = ["init-if-needed"]}
anchor-spl = "0.28.0"
solana-program = "1.15.2"
spl-associated-token-account = { version = "1.1.3", features = ["no-entrypoint"] }
# spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
